# download-gmail-pdfs

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: build.yml
docs/: conf.py  index.rst
src/download_gmail_pdfs/: main.py
src/download_gmail_pdfs/utils/: __init__.py  connect.py  fetch.py  file_utils.py  load_accounts.py  manifest.py  message.py
tests/: tests.py
