[project]
name = "download-gmail-pdf"
version = "0.1.0"
description = "Download PDF files from a gmail account"
authors = [
    { name = "Erik van Widenfelt", email = "ew2789@gmail.com" },
]
keywords = [
    "clinicedc",
    "parse",
    "laboratory results",
    "Muhimbili",
]
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.5",
    "sphinx>=9.1.0",
]

lint = [
    "ruff>=0.12.5",
]

docs = [
    "furo>=2025.7.19",
    "sphinx>=8.2.3",
    "sphinx-design>=0.6.1",
    "sphinx-inline-tabs>=2023.4.21",
]

[project.scripts]
download-gmail-pdfs = "download_gmail_pdfs.main:main"

[build-system]
requires = ["uv_build>=0.7.2,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "download_gmail_pdfs"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 95
indent-width = 4
target-version = "py312"
extend-exclude = [
    "migrations",
    "*/view_definition.py",
    ".tox",
    ".venv",
    ".ipynb",
    "docs/conf.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C90",
    "COM",
    "DJ",
    "DTZ",
    "E",
    "F",
    "FA",
    "FURB",
    "I",
    "INT",
    "N",
    "PD",
    "PERF",
    "PL",
    "PLR",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
    # "FIX",
]
ignore = ["S101", "DJ008", "DJ007", "DJ006", "COM812", "PLC0206", "PLR2004", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = ["*.ipynb"]
